WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286306
REGRESSION (
289112@main
?): [ x86_64 ] 2 imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any*.html?mp3 tests are constantly crashing.
https://bugs.webkit.org/show_bug.cgi?id=286306
Summary
REGRESSION (289112@main?): [ x86_64 ] 2 imported/w3c/web-platform-tests/webc...
Yasmin Karimi
Reported
2025-01-21 10:45:34 PST
Created
attachment 473971
[details]
audioDecoder-codec-specific.https.any.worker_mp3-crash-log.ips The following 2 tests are constantly crashing on macOS x86_64: imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?mp3 imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?mp3 HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2FaudioDecoder-codec-specific.https.any.html%3Fmp3&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2FaudioDecoder-codec-specific.https.any.worker.html%3Fmp3&architecture=x86_64
CRASH LOG: Attached REGRESSION: Contextual information indicates the probable regression point is
289112@main
. The crash signature shows that the affected code path was changed at this point, which leads me to this assumption.
Attachments
audioDecoder-codec-specific.https.any.worker_mp3-crash-log.ips
(66.47 KB, text/plain)
2025-01-21 10:45 PST
,
Yasmin Karimi
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-21 10:45:45 PST
<
rdar://problem/143330108
>
EWS
Comment 2
2025-01-21 12:05:24 PST
Test gardening commit
289196@main
(a9c91b1eb3c3): <
https://commits.webkit.org/289196@main
> Reviewed commits have been landed. Closing PR #39332 and removing active labels.
Chris Dumez
Comment 3
2025-01-21 12:16:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39334
EWS
Comment 4
2025-01-21 13:55:19 PST
Committed
289201@main
(490a3dccb28f): <
https://commits.webkit.org/289201@main
> Reviewed commits have been landed. Closing PR #39334 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug