REGRESSION (289112@main?): [ x86_64 ]  2 imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any*.html?mp3 tests are constantly crashing. https://bugs.webkit.org/show_bug.cgi?id=286306 rdar://143330108

Unreviewed partial revert to address the regression until I can investigate.

* Source/WebCore/platform/audio/cocoa/AudioSampleBufferConverter.mm:
(WebCore::AudioSampleBufferConverter::processSampleBuffers):

Canonical link: https://commits.webkit.org/289201@main